# ffiasm

c/: CMakeLists.txt  CMakeLists_no_cuda.txt  README_GPU.md  curve.hpp  msm.cpp  msm.hpp  msm_gpu.cpp  msm_gpu.cu  msm_gpu.hpp  test_gpu.cpp
c/gpu/: gpu_common.hpp  gpu_integration.cpp  gpu_integration.hpp  gpu_msm.cpp  gpu_msm.hpp  gpu_msm_advanced.cu  gpu_msm_kernels.cu
